--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,9 @@ name = "scorify"
 version = "0.1.0"
 description = "Cryo-ET template matching score analysis"
 requires-python = ">=3.10"
-authors = ["Valentin Maurer <valentin.maurer@embl-hamburg.de>"]
+authors = [{name = "Valentin Maurer", email = "valentin.maurer@embl-hamburg.de"}]
 license = "GPL-2.0-only"
 readme = "README.md"
-repository = "https://github.com/maurerv/scorify"
 dependencies = [
     "streamlit",
     "plotly",
